--- a/style.css
+++ b/style.css
@@ -184,6 +184,49 @@ body {
   }
 }
 
+.dialog-overlay {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+.dialog {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 90%;
+  height: 150px;
+  background-color: whitesmoke;
+  border-radius: 5px;
+}
+
+.dialog h1 {
+  position: relative;
+  top: -12px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.dialog p {
+  position: relative;
+  top: -8px;
+  font-size: 0.8em;
+  margin: 5px 0;
+  overflow-y: auto;
+}
+
+.dialog button {
+  position: relative;
+  top: 30px;
+  width: 50px;
+}
+
 .bg {
   position: fixed;
   width: 100%;
@@ -202,7 +245,7 @@ main {
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.75);
   width: 90%;
-  height: 250px;
+  height: 270px;
   padding: 10px;
   border-radius: 5px;
 }
@@ -260,15 +303,19 @@ div.i-lo {
   font-size: 0.75em;
 }
 
+main button {
+  width: 90%;
+}
+
 .btn-primary {
   background-color: var(--primary-color);
   color: var(--text-color);
-  width: 90%;
   height: 35px;
   margin: 10px 0;
   border: none;
   border-radius: 5px;
   align-self: center;
+  cursor: pointer;
   transition: background-color 0.1s;
 }
 
